Fix blogposts display on small screen

--- a/layout.css
+++ b/layout.css
@@ -406,7 +406,7 @@ footer .social a {
   .card,
   .mission .card,
   .members .card,
-  .prefooter .posts .card {
+  .prefooter .view-content .card {
     float: none;
     width: 100%;
     margin-bottom: 20px;
